--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
     "@ionic/cli-plugin-ionic-angular": "1.3.2",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "A convenient toolbox for developers"
 }
