--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,6 +8,6 @@
     "sizes": "512x512",
     "type": "image/png"
   }],
-  "background_color": "#4e93b4",
-  "theme_color": "#4e93b4"
+  "background_color": "#34495E",
+  "theme_color": "#34495E"
 }
