Refine menu style

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,6 +8,6 @@
     "sizes": "512x512",
     "type": "image/png"
   }],
-  "background_color": "#34495E",
-  "theme_color": "#34495E"
+  "background_color": "#283E4A",
+  "theme_color": "#283E4A"
 }
