--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.5.3",
+    "ionic-angular": "^3.6.0",
+    "ionic-plugin-deeplinks": "^1.0.15",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
@@ -32,8 +33,20 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.0.2",
-    "@ionic/cli-plugin-ionic-angular": "1.3.2",
+    "@ionic/cli-plugin-cordova": "1.5.0",
+    "@ionic/cli-plugin-ionic-angular": "1.4.0",
+    "ionic": "3.6.0",
     "typescript": "2.3.4"
   },
-  "description": "A convenient toolbox for developers"
+  "description": "A convenient toolbox for developers",
+  "cordova": {
+    "plugins": {
+      "ionic-plugin-deeplinks": {
+        "URL_SCHEME": "coderbox",
+        "DEEPLINK_SCHEME": "http",
+        "DEEPLINK_HOST": "coderbox.io",
+        "ANDROID_PATH_PREFIX": "/"
+      }
+    }
+  }
 }
