--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ionic-angular": "^3.6.0",
     "ionic-plugin-deeplinks": "^1.0.15",
     "ionicons": "3.0.0",
+    "jshashes": "^1.0.7",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
