--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "angular2-elastic": "^0.13.0",
     "ionic-angular": "^3.6.0",
     "ionic-plugin-deeplinks": "^1.0.15",
     "ionicons": "3.0.0",
