--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "^5.5.1",
     "@ionic/angular": "^4.4.0",
     "core-js": "^2.6.5",
+    "jshashes": "^1.0.7",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.3",
     "zone.js": "~0.8.26"
