--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/http": "^7.2.15",
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "^7.2.15",
+    "@angular/service-worker": "^7.2.15",
     "@ionic-native/core": "^5.5.1",
     "@ionic-native/splash-screen": "^5.5.1",
     "@ionic-native/status-bar": "^5.5.1",
