--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:server": "ng build --prod && cd server && npm install && npm run build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "gcloud app deploy server/app.yaml"
   },
   "private": true,
   "dependencies": {
