--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "compression": "^1.7.4",
     "express": "^4.16.4"
   },
   "devDependencies": {
