--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "coderbox",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "version": "0.1.0",
+  "license": "MIT",
+  "author": "Chen Yumin <hello@chenyumin.com>",
+  "homepage": "https://coderbox.app",
+  "description": "CoderBox is a Progressive Web App (PWA) designed by developers for developers. It contains common dev tools needed for day to day coding environment.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -60,6 +62,5 @@
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "typescript": "~3.5.3"
-  },
-  "description": "An Ionic project"
+  }
 }
