--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@angular/platform-browser": "^8.2.1",
     "@angular/platform-browser-dynamic": "^8.2.1",
     "@angular/platform-server": "^8.2.1",
+    "@angular/pwa": "^0.802.2",
     "@angular/router": "^8.2.1",
+    "@angular/service-worker": "^8.2.1",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "express": "^4.15.2",
