--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
   "name": "coderbox",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run serve:ssr",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:local": "ng serve",
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
     "build:client-and-server-bundles": "ng build --prod && ng run coderbox:server:production --bundleDependencies all"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.1",
-    "@angular/cdk": "^8.1.2",
-    "@angular/common": "^8.2.1",
-    "@angular/compiler": "^8.2.1",
-    "@angular/core": "^8.2.1",
-    "@angular/forms": "^8.2.1",
-    "@angular/material": "^8.1.2",
-    "@angular/platform-browser": "^8.2.1",
-    "@angular/platform-browser-dynamic": "^8.2.1",
-    "@angular/platform-server": "^8.2.1",
+    "@angular/animations": "^8.2.2",
+    "@angular/cdk": "^8.1.3",
+    "@angular/common": "^8.2.2",
+    "@angular/compiler": "^8.2.2",
+    "@angular/core": "^8.2.2",
+    "@angular/forms": "^8.2.2",
+    "@angular/material": "^8.1.3",
+    "@angular/platform-browser": "^8.2.2",
+    "@angular/platform-browser-dynamic": "^8.2.2",
+    "@angular/platform-server": "^8.2.2",
     "@angular/pwa": "^0.802.2",
-    "@angular/router": "^8.2.1",
-    "@angular/service-worker": "^8.2.1",
+    "@angular/router": "^8.2.2",
+    "@angular/service-worker": "^8.2.2",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.802.1",
-    "@angular/cli": "^8.2.1",
-    "@angular/compiler-cli": "^8.2.1",
-    "@angular/language-service": "^8.2.1",
-    "@types/node": "^12.7.1",
+    "@angular-devkit/build-angular": "^0.802.2",
+    "@angular/cli": "^8.2.2",
+    "@angular/compiler-cli": "^8.2.2",
+    "@angular/language-service": "^8.2.2",
+    "@types/node": "^12.7.2",
     "@types/jasmine": "^3.4.0",
     "@types/jasminewd2": "^2.0.6",
     "codelyzer": "^5.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.2.0",
-    "karma-chrome-launcher": "^3.0.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
