--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "src/assets",
               "src/manifest.webmanifest"
@@ -149,6 +149,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "coderbox"
 }
