--- a/package.json
+++ b/package.json
@@ -12,54 +12,53 @@
     "serve:local": "ng serve",
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build --prod && ng run coderbox:server:production --bundleDependencies all",
+    "build:client-and-server-bundles": "ng build --prod && ng run coderbox:server:production --bundleDependencies",
     "prettier": "prettier --write 'src/**/*.{ts,js,json,scss,html}'"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/pwa": "^0.803.21",
-    "@angular/router": "^8.2.14",
-    "@angular/service-worker": "^8.2.14",
-    "@nguniversal/express-engine": "^8.2.6",
-    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@angular/animations": "^9.0.0-rc.7",
+    "@angular/cdk": "^9.0.0-rc.6",
+    "@angular/common": "^9.0.0-rc.7",
+    "@angular/compiler": "^9.0.0-rc.7",
+    "@angular/core": "^9.0.0-rc.7",
+    "@angular/forms": "^9.0.0-rc.7",
+    "@angular/material": "^9.0.0-rc.6",
+    "@angular/platform-browser": "^9.0.0-rc.7",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.7",
+    "@angular/platform-server": "^9.0.0-rc.7",
+    "@angular/pwa": "^0.900.0-rc.7",
+    "@angular/router": "^9.0.0-rc.7",
+    "@angular/service-worker": "^9.0.0-rc.7",
+    "@nguniversal/express-engine": "^9.0.0-next.14",
+    "@nguniversal/module-map-ngfactory-loader": "^9.0.0-next.9",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
-    "@angular/cli": "^8.3.21",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "^0.900.0-rc.7",
+    "@angular/cli": "^9.0.0-rc.7",
+    "@angular/compiler-cli": "^9.0.0-rc.7",
+    "@angular/language-service": "^9.0.0-rc.7",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.22",
     "codelyzer": "^5.2.1",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.5.1",
-    "prettier": "^1.19.1",
     "protractor": "~5.4.2",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
-    "typescript": "~3.5.3",
+    "typescript": "~3.6.4",
     "webpack-cli": "^3.3.10"
   }
 }
